Add lazyload test

--- a/views/file.erb
+++ b/views/file.erb
@@ -1,1 +1,1 @@
-<img src="<%= @media["url"] %>">
+<img data-original="<%= @media["url"] %>" src="<%= thumbnail_src(@path) %>" class="lazy" width="640" height="480" style="width: 640; height: 480px;">
