--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,6 +10,7 @@
       <%= yield %>
     </div>
     <script type="text/javascript" src="/js/jquery-1.8.1.js"></script>
+    <script type="text/javascript" src="/js/jquery.lazyload.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/application.js"></script>
   </body>
